cluster/apps/self-hosted/kguardian/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'kguardian.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system
  rules:
    - backendRefs:
        - name: kguardian-frontend
          port: 5173
          weight: 100
